Fix windows path issues